# Tomus

./: CMakeLists.txt  CPM.cmake  README.md  admissible.txt  config.json  filter.py  main.cpp
res/: config.json
tomus/: config.cpp  config.h  tomus.cpp  tomus.h
